tests/NormalTests/paczka1/fuzzy1/10791104.err
Error in line 5: B9oDNek A966 90,7
Error in line 4: s3l7h A796 90,5
Error in line 20: Uhu0Zp79qx A796 67,4
Error in line 25: Uhu0Zp79qx A966 21,4
Error in line 19: 42Nbufb4C A796 82,8
Error in line 28: 42Nbufb4C A966 83,8
